--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main class="main">Main</main>
         <article class="details1">details 1</article>
         <article class="details2">details 2</article>
-        <footer class="footer">Footer</footer>
+        <footer class="footer1">Footer</footer>
         <div class="footer2">Footer 2</div>
     </div>
 </body>
