--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Fraser Rankin</title>
 <head>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="layout">
